# 2.9-QuantumLeap

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
desktop-agent/: .gitignore  README.md  package-lock.json  package.json
desktop-agent/resources/: afterburner_service.py  requirements.txt  zion_native_miner_v2_9.py
desktop-agent/resources/ai/: stratum_client.py  zion_universal_miner.py
desktop-agent/resources/mining/: cosmic_harmony_wrapper.py  gpu_autolykos_v2_engine 2.py  native_autolykos_wrapper.py
desktop-agent/src/: main.js  preload.js  wallet-generator.js
desktop-agent/src/assets/: icon.icns
desktop-agent/src/ui/: index.html  renderer.js
docs/: README.md  api-reference.md  consciousness-levels.md  economic-model.md  faq.md  getting-started.md  mining-guide.md  roadmap-lite.md  whitepaper-lite.md
docs/WP2.9/: 01_ABSTRACT_AND_VISION.md  02_LIBERATION_MANIFESTO.md  03_TECHNICAL_ARCHITECTURE.md  04_WARP_MULTICHAIN_BRIDGE.md  05_CONSCIOUSNESS_MINING.md  06_ECONOMIC_MODEL.md  07_PRESALE_2026.md  08_DAO_GOVERNANCE.md  09_HUMANITARIAN_TITHE.md  10_ECOSYSTEM_PARTNERS.md  11_ROADMAP_TO_295.md  12_CONCLUSION.md  README.md  WHITEPAPER_LITE_CZ.md  WHITEPAPER_LITE_EN.md
miner/: pyproject.toml
miner/src/zion_miner/: README.md  __init__.py  __main__.py  algorithms_registry.py  zion_miner_v2_9.py
miner/src/zion_miner/algorithms/: __init__.py  autolykos_opencl.py  autolykos_v2.cl
miner/src/zion_miner/metrics/: __init__.py
miner/src/zion_miner/network/: __init__.py
native-libs/: BUILD.md
native-libs/cosmic_harmony/: CMakeLists.txt  blake3_avx512_stub.c  cosmic_harmony_c_wrapper.cpp
native-libs/cosmic_harmony/src/: zion-cosmic-harmony.cpp
native-libs/randomx/: CMakeLists.txt  randomx_c_wrapper.cpp  zion-randomx.cpp
native-libs/yescrypt/: CMakeLists.txt  yescrypt_c_wrapper.cpp  zion-yescrypt.cpp
node-skeleton/: README.md  pyproject.toml
node-skeleton/protocol/: messages.md
node-skeleton/protocol/schema/: handshake.json  peers.json
node-skeleton/src/zion_node_skeleton/: __init__.py  __main__.py  message.py  node.py  peer_store.py
qdl/: DEVELOPMENT_SUMMARY.md  QDL_PRO_LAIKY_CZ.md  QUICK_START.md  README.md  ZQAL_INTEGRATION_CZ.md
qdl/compiler/: codegen.py  lexer.py  parser.py
qdl/distributed/: README.md  __init__.py  miner_node.py  network_manager.py  performance_benchmarks.py  protocol.py  quantum_pulse.py
qdl/examples/: bell_state.py  grover_search.py  quantum_fourier_transform.py  syntax_demo.qdl
qdl/simulator/: __init__.py  gates.py  measurement.py  qubit.py
qdl/zqal/: __init__.py  bridge.py  interpreter.py  tones.py
