[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zion-miner"
version = "2.9.0"
description = "ZION Miner v2.9 (public export)"
readme = "src/zion_miner/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
